--- a/css/theme/beige.css
+++ b/css/theme/beige.css
@@ -47,7 +47,7 @@ body {
   color: #333;
   font-family: "League Gothic", Impact, sans-serif;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
@@ -64,6 +64,9 @@ body {
 
 .reveal h4 {
   font-size: 1em; }
+
+.reveal h1 + p {
+  margin-top: 1.5em; }
 
 .reveal h1 {
   text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15); }
@@ -210,9 +213,9 @@ body {
 .reveal a {
   color: #8b743d;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
 
 .reveal a:hover {
   color: #c0a86e;
@@ -237,9 +240,9 @@ body {
   box-shadow: none; }
 
 .reveal a img {
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  transition: all 0.15s linear; }
+  -webkit-transition: all .15s linear;
+  -moz-transition: all .15s linear;
+  transition: all .15s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -276,6 +279,12 @@ body {
 
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #c0a86e; }
+
+.reveal .small {
+  font-size: .8em; }
+
+.reveal .accent {
+  color: #8b743d; }
 
 /*********************************************
  * PROGRESS BAR
