--- a/css/theme/night.css
+++ b/css/theme/night.css
@@ -41,7 +41,7 @@ body {
   color: #eee;
   font-family: "Montserrat", Impact, sans-serif;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: -0.03em;
   text-transform: none;
   text-shadow: none;
@@ -58,6 +58,9 @@ body {
 
 .reveal h4 {
   font-size: 1em; }
+
+.reveal h1 + p {
+  margin-top: 1.5em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -204,9 +207,9 @@ body {
 .reveal a {
   color: #e7ad52;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
 
 .reveal a:hover {
   color: #f3d7ac;
@@ -231,9 +234,9 @@ body {
   box-shadow: none; }
 
 .reveal a img {
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  transition: all 0.15s linear; }
+  -webkit-transition: all .15s linear;
+  -moz-transition: all .15s linear;
+  transition: all .15s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -270,6 +273,12 @@ body {
 
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #f3d7ac; }
+
+.reveal .small {
+  font-size: .8em; }
+
+.reveal .accent {
+  color: #e7ad52; }
 
 /*********************************************
  * PROGRESS BAR
