--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -50,7 +50,7 @@ body {
   color: #333;
   font-family: "Quicksand", sans-serif;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: -0.08em;
   text-transform: uppercase;
   text-shadow: none;
@@ -67,6 +67,9 @@ body {
 
 .reveal h4 {
   font-size: 1em; }
+
+.reveal h1 + p {
+  margin-top: 1.5em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -213,9 +216,9 @@ body {
 .reveal a {
   color: #3b759e;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
 
 .reveal a:hover {
   color: #74a7cb;
@@ -240,9 +243,9 @@ body {
   box-shadow: none; }
 
 .reveal a img {
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  transition: all 0.15s linear; }
+  -webkit-transition: all .15s linear;
+  -moz-transition: all .15s linear;
+  transition: all .15s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -279,6 +282,12 @@ body {
 
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #74a7cb; }
+
+.reveal .small {
+  font-size: .8em; }
+
+.reveal .accent {
+  color: #3b759e; }
 
 /*********************************************
  * PROGRESS BAR
