--- a/css/theme/solarized.css
+++ b/css/theme/solarized.css
@@ -47,7 +47,7 @@ body {
   color: #586e75;
   font-family: "League Gothic", Impact, sans-serif;
   font-weight: normal;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
@@ -64,6 +64,9 @@ body {
 
 .reveal h4 {
   font-size: 1em; }
+
+.reveal h1 + p {
+  margin-top: 1.5em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -210,9 +213,9 @@ body {
 .reveal a {
   color: #268bd2;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
 
 .reveal a:hover {
   color: #78b9e6;
@@ -237,9 +240,9 @@ body {
   box-shadow: none; }
 
 .reveal a img {
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  transition: all 0.15s linear; }
+  -webkit-transition: all .15s linear;
+  -moz-transition: all .15s linear;
+  transition: all .15s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -276,6 +279,12 @@ body {
 
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #78b9e6; }
+
+.reveal .small {
+  font-size: .8em; }
+
+.reveal .accent {
+  color: #268bd2; }
 
 /*********************************************
  * PROGRESS BAR
