--- a/css/theme/source/black.scss
+++ b/css/theme/source/black.scss
@@ -21,20 +21,20 @@ $backgroundColor: #222;
 $mainColor: #fff;
 $headingColor: #fff;
 
-$mainFontSize: 38px;
+//$mainFontSize: 38px;
 $mainFont: 'Source Sans Pro', Helvetica, sans-serif;
-$headingFont: 'Source Sans Pro', Helvetica, sans-serif;
+//$headingFont: 'Source Sans Pro', Helvetica, sans-serif;
 $headingTextShadow: none;
-$headingLetterSpacing: normal;
+$headingLetterSpacing: -.02em;
 $headingTextTransform: uppercase;
-$headingFontWeight: 600;
-$linkColor: #42affa;
+$headingFontWeight: normal;
+$linkColor: yellow;
 $linkColorHover: lighten( $linkColor, 15% );
 $selectionBackgroundColor: lighten( $linkColor, 25% );
 
-$heading1Size: 2.5em;
-$heading2Size: 1.6em;
-$heading3Size: 1.3em;
+$heading1Size: 2.2em;
+$heading2Size: 1.5em;
+$heading3Size: 1.2em;
 $heading4Size: 1.0em;
 
 section.has-light-background {
