--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -57,6 +57,10 @@ body {
 .reveal h3 {font-size: $heading3Size; }
 .reveal h4 {font-size: $heading4Size; }
 
+.reveal h1 + p {
+	margin-top: 1.5em;
+}
+
 .reveal h1 {
 	text-shadow: $heading1TextShadow;
 }
@@ -326,6 +330,14 @@ body {
 	border-top-color: $linkColorHover;
 }
 
+.reveal .small {
+	font-size: .8em;
+}
+
+.reveal .accent {
+	color: $linkColor;
+}
+
 
 /*********************************************
  * PROGRESS BAR
@@ -341,5 +353,3 @@ body {
 		   -moz-transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		        transition: width 800ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 	}
-
-
