--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -43,7 +43,7 @@ body {
   color: #222;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
@@ -60,6 +60,9 @@ body {
 
 .reveal h4 {
   font-size: 1em; }
+
+.reveal h1 + p {
+  margin-top: 1.5em; }
 
 .reveal h1 {
   text-shadow: none; }
@@ -206,9 +209,9 @@ body {
 .reveal a {
   color: #2a76dd;
   text-decoration: none;
-  -webkit-transition: color 0.15s ease;
-  -moz-transition: color 0.15s ease;
-  transition: color 0.15s ease; }
+  -webkit-transition: color .15s ease;
+  -moz-transition: color .15s ease;
+  transition: color .15s ease; }
 
 .reveal a:hover {
   color: #6ca0e8;
@@ -233,9 +236,9 @@ body {
   box-shadow: none; }
 
 .reveal a img {
-  -webkit-transition: all 0.15s linear;
-  -moz-transition: all 0.15s linear;
-  transition: all 0.15s linear; }
+  -webkit-transition: all .15s linear;
+  -moz-transition: all .15s linear;
+  transition: all .15s linear; }
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
@@ -272,6 +275,12 @@ body {
 
 .reveal .controls .navigate-down.enabled:hover {
   border-top-color: #6ca0e8; }
+
+.reveal .small {
+  font-size: .8em; }
+
+.reveal .accent {
+  color: #2a76dd; }
 
 /*********************************************
  * PROGRESS BAR
